# genericbot-rs

./: .rustfmt.toml  Cargo.toml
src/: context.rs  main.rs
